# MinecraftServerGacha

./: .gitignore  README.md  docker-compose.yml
minecraft-backend/: Dockerfile  main.py  pyproject.toml
minecraft-backend/src/controllers/: Auth.py  JWT.py  MarkdownTrans.py
minecraft-backend/src/database/: DBCardsModels.py  DBModels.py
minecraft-backend/src/gacha/: Boosters.py  CardBuilder.py  WeaponEnchantment.py
minecraft-backend/src/models/: Internal.py  Message.py  Settings.py
minecraft-backend/src/routers/: Config.py  Gacha.py  Minecraft.py  User.py
minecraft-frontend/: Dockerfile  index.html  package.json  vite.config.js
minecraft-frontend/src/: App.jsx  index.css
minecraft-frontend/src/components/: Banner.jsx  ContentDisplay.jsx  Footer.jsx  InformationFrame.jsx  Navbar.jsx  NewsCard.jsx  PlayersBanner.jsx
minecraft-frontend/src/components/UserComp/: NewsPanel.jsx  PlayersPanel.jsx  ServerInfo.jsx
minecraft-frontend/src/css/: Banner.css  Misc.css  Navbar.css
minecraft-frontend/src/logic/: AuthController.js
minecraft-frontend/src/pages/: Gallery.css  Gallery.jsx  Home.jsx  Login.jsx  ProtectedRoute.jsx  User.jsx
